[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/third_level/3.png" type="Texture" id=1]
[ext_resource path="res://Sprites/third_level/1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/third_level/4.png" type="Texture" id=3]
[ext_resource path="res://Sprites/third_level/2.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Level_3/MainScene.gd" type="Script" id=5]
[ext_resource path="res://Sprites/third_level/r2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/third_level/r3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/third_level/r5.png" type="Texture" id=8]
[ext_resource path="res://Sprites/third_level/r4.png" type="Texture" id=9]
[ext_resource path="res://Sprites/third_level/r1.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Level2/RobotSprite.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/LevelUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sprites/first_level/backround.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 26.0
height = 0.0

[node name="MainScene" type="Node2D"]
script = ExtResource( 5 )

[node name="background" type="TextureRect" parent="."]
margin_left = -34.0
margin_top = -44.0
margin_right = 1709.0
margin_bottom = 895.0
texture = ExtResource( 13 )

[node name="RobotSprite" parent="." groups=["robot"] instance=ExtResource( 11 )]
position = Vector2( -447, 89 )

[node name="Stand" type="AnimatedSprite" parent="."]
position = Vector2( 798, 267 )
frames = SubResource( 1 )
centered = false

[node name="Arm" type="AnimatedSprite" parent="."]
position = Vector2( 648, 627 )
frames = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="Arm"]
position = Vector2( -36, -68 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Arm/Area2D"]
position = Vector2( -2, 0 )
shape = SubResource( 3 )

[node name="LevelUI" parent="." instance=ExtResource( 12 )]

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( -11660.8, 505.8 )
scale = Vector2( 15.15, 8.4 )
points = PoolVector2Array( 833.713, -20.8095 )

[connection signal="animation_finished" from="Stand" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Arm" to="." method="_on_Arm_animation_finished"]
[connection signal="body_entered" from="Arm/Area2D" to="." method="_on_Area2D_body_entered"]
